# flask-merchnts-cp

./: .gitignore  .pre-commit-config.yaml  README.es.md  README.md  blank-for-copilot.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pre-commit-autofix.yml  tests.yml
examples/: admin_app.py  basic_app.py  multi_model_app.py  pagos_app.py  quart_app.py  sqla_app.py
flask_merchants/: __init__.py  models.py  quart_views.py  version.py  views.py
flask_merchants/contrib/: __init__.py  admin.py  sqla.py
flask_merchants/templates/flask_merchants/admin/: payments_list.html  providers_list.html
instance/: pagos.db
tests/: conftest.py  test_contrib_admin.py  test_contrib_sqla.py  test_custom_model.py  test_extension.py  test_multi_model.py  test_provider_selection.py  test_quart.py  test_views.py  test_webhook.py
