[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flask-merchants"
dynamic = ["version"]
description = "Flask extension for the merchants hosted-checkout payment SDK"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "merchants>=0.1.0",
]

[project.optional-dependencies]
admin = ["flask-admin>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-flask>=1.3",
    "flask-admin>=2.0",
]

[tool.hatch.version]
path = "flask_merchants/version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
